Build single executable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,18 @@ jobs:
       with:
         node-version: 21
     - run: npm install
-    - run: node hello.js
+    - name: Generate single executable preparation blob
+      run: node --experimental-sea-config sea-config.json
+    - name: Create copy of node executable
+      run: >
+        node -e "require('fs').copyFileSync(process.execPath, 'hello.exe')"
+    - name: Remove binary signature
+      run: signtool remove /s hello.exe
+    - name: Inject blob
+      run: >
+        npx postject hello.exe NODE_SEA_BLOB sea-prep.blob `
+          --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2
+    - uses: actions/upload-artifact@v4
+      with:
+        name: hello.exe
+        path: hello.exe
